--- a/views/test.hbs
+++ b/views/test.hbs
@@ -29,3 +29,8 @@
     <input type="text" name="video" placeholder="video">
     <button type="submit">Send</button>
 </form>
+
+<form method="POST" action="/api/sletteord">
+    <input type="text" name="ord" placeholder="ord">
+    <button type="submit">Slet</button>
+</form>
