'Redigér ord' panel knap har nu en javascriptfunktion

--- a/views/ordbog.hbs
+++ b/views/ordbog.hbs
@@ -13,7 +13,7 @@
       <ul>
         <li id="js_dine_ord" class="panel" onclick="dine_ord()"><a href="#">Dine ord</a></li>
         <li id="js_tilfoj_ord" class="panel"><a href="#" onclick="tilfoj_ord()">Tilføj ord</a></li>
-        <li id="js_rediger_ord" class="panel"<a href="#" onclick="rediger_ord()">Redigér ord</a></li>
+        <li id="js_rediger_ord" class="panel"><a href="#" onclick="rediger_ord()">Redigér ord</a></li>
       </ul>
     </nav>
     <section>
