--- a/views/ordbog.hbs
+++ b/views/ordbog.hbs
@@ -38,6 +38,8 @@
           <p>Rediger ord:<br></p>
           <input type="text" name="input_rediger_ord" id="input_rediger_ord" placeholder="Redigér ord"></input>
           <input type="submit" value="Gem"></input>
+          </form>
+          <form>
           <p>Slet ord:<br></p>
           <input type="text" name="input_slet_ord" id="input_slet_ord" placeholder="Slet ord"></input>
           <input type="submit" value="Slet"></input>
