'Redigér ord' er udeladt til næste sprint

--- a/views/ordbog.hbs
+++ b/views/ordbog.hbs
@@ -13,7 +13,9 @@
       <ul>
         <li id="js_dine_ord" class="panel" onclick="dine_ord()"><a href="#">Dine ord</a></li>
         <li id="js_tilfoj_ord" class="panel"><a href="#" onclick="tilfoj_ord()">Tilføj ord</a></li>
-        <li id="js_rediger_ord" class="panel"><a href="#" onclick="rediger_ord()">Redigér ord</a></li>
+        <!--<li id="js_rediger_ord" class="panel"><a href="#" onclick="rediger_ord()">Redigér ord</a></li> -->
+        <li id="js_slet_ord" class="panel"><a href="#" onclick="slet_ord()">Slet ord</a></li>
+        
       </ul>
     </nav>
     <section>
@@ -33,11 +35,11 @@
           <input type="submit" value="Gem"></input>
         </form>
       </div>
-      <div id="rediger_ord" style="display: none">
+      <div id="slet_ord" style="display: none">
         <form>
-          <p>Rediger ord:<br></p>
+          <!--<p>Rediger ord:<br></p>
           <input type="text" name="input_rediger_ord" id="input_rediger_ord" placeholder="Redigér ord"></input>
-          <input type="submit" value="Gem"></input>
+          <input type="submit" value="Gem"></input> -->
           <p>Slet ord:<br></p>
           <input type="text" name="input_slet_ord" id="input_slet_ord" placeholder="Slet ord"></input>
           <input type="submit" value="Slet"></input>
