I gang med at lave tilføj ord.

--- a/views/ordbog.hbs
+++ b/views/ordbog.hbs
@@ -26,9 +26,9 @@
         
       </div>
       <div id="tilfoj_ord" style="display: none;">
-        <form>
+        <form method="POST" action="ordbog/postord">
           <p>Nyt ord:<br></p>
-          <input type="text" name="input_nyt_ord" id="input_nyt_ord" placeholder="Skriv her"></input>
+          <input type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her"></input>
           <input type="submit" value="Gem"></input>
         </form>
       </div>
