--- a/Ordbog/public/stylesheets/tempOrdbogSheet.css
+++ b/Ordbog/public/stylesheets/tempOrdbogSheet.css
@@ -31,3 +31,32 @@ h1{
   margin:auto;
   max-width:30em;
 }
+
+.floatTilfoj{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.floatSlet{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:120px;
+	right:40px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+.my-float{
+	margin-top:22px;
+}
