lille rettelse (camelCase rettelse)

--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -26,7 +26,7 @@
         {{#each this}}
           <input type="radio" name="ord" value={{this._id}}>{{this.ord}}<br>
         {{/each}}
-          <input type="submit" value="Slet" class="floatSlet">
+          <input type="submit" value="slet" class="floatSlet">
         </form>
       </div>
       <div id="tilfoj_ord" style="display: none;">
