--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -30,7 +30,7 @@
     <!-- Hovedafsnit / Dine ord -->
     <div id="dine_ord">
       <p>Ordliste:</p>
-      <!-- Form hvor ord indsættes. Ord kan markeres og slettes med 'Slet'-submit knap. -->
+      <!-- Form hvor ord.Ord kan markeres og slettes med 'Slet'-submit knap. -->
       <form method="POST" action="<!-- indsæt ny metode -->">
 
         {{#each this}}
