Upload image fungere næsten.

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -34,3 +34,10 @@
     <input type="text" name="ord" placeholder="ord">
     <button type="submit">Slet</button>
 </form>
+
+<h1>Upload Image</h1>
+ 
+<form action="./ordbog/uploadimage" method="post" enctype="multipart/form-data">
+        <input type="file" accept="image/*" name="image" >
+        <input type="submit" value="upload">
+</form>
