Forbederelse til image upload til Google Cloud.

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -37,7 +37,7 @@
 
 <h1>Upload Image</h1>
  
-<form action="./ordbog/uploadimage2" method="post" enctype="multipart/form-data">
+<form action="./ordbog/uploadimage" method="post" enctype="multipart/form-data">
         <input type="file" accept="image/*" name="image" >
         <input type="submit" value="upload">
 </form>
