testing index.js

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -12,6 +12,7 @@
 
 <form method="POST" action="/api/updateord">
     <input type="text" name="ord" placeholder="ord">
+    <input type="text" name="nyt_ord" placeholder="nyt_ord">
     <button type="submit">Send</button>
 </form>
 
@@ -30,7 +31,7 @@
     <button type="submit">Send</button>
 </form>
 
-<form method="POST" action="./ordbog/slet_ord">
+<form method="POST" action="./api/slet_ord">
     <input type="text" name="ord" placeholder="ord">
     <button type="submit">Slet</button>
 </form>
