slette function works parcially - except also deletes first doc in manodb when no word is sumitted..

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -31,7 +31,7 @@
     <button type="submit">Send</button>
 </form>
 
-<form method="POST" action="./api/slet_ord">
+<form method="POST" action="./test/slet_ord">
     <input type="text" name="ord" placeholder="ord">
     <button type="submit">Slet</button>
 </form>
