--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -30,7 +30,7 @@
     <button type="submit">Send</button>
 </form>
 
-<form method="POST" action="./ordbog/slet_ord">
+<form method="POST" action="./test/slet_ord">
     <input type="text" name="ord" placeholder="ord">
     <button type="submit">Slet</button>
 </form>
