--- a/Ordbog/views/tilfojord.hbs
+++ b/Ordbog/views/tilfojord.hbs
@@ -17,7 +17,7 @@
     </header>
     <section>
         <div id="tilfoj_ord">
-            <form method="POST" action="./tilfojord/postord">
+            <form method="POST" action="./ordbog/postord">
                 <p id="overskriftTilfojOrd" class="overskrift">Nyt ord:<br></p>
                 <input type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her"></input>
                 <input type="submit" value="Gem"></input>
