--- a/Ordbog/views/visord.hbs
+++ b/Ordbog/views/visord.hbs
@@ -12,20 +12,23 @@
     <header>
         <nav>
             <ul class="panel">
-                <li id="js_dine_ord" class="menuknap"><a href="ordbog#">Dine ord</a></li>
+                <li id="js_dine_ord" class="menuknap">Dine ord</li>
             </ul>
         </nav>
     </header>
     <section>
         <!-- Hovedafsnit / Vis ord og billeder og redigér-->
+        {{#if this}}
         <div id="vis_ord">
-            <!-- <img class="visOrdBillede"> -->
+            <img class="visOrdBillede">
 
-            <h5 class="visOrdOrd">{{url.ord}}</h5>
-            <h6 class="visOrdKategori">Kategori</p>
-                <a href="#" class="btnVisOrdAfspilLyd">Afspil lydfil</button><br>
-                    <a href="#" id="btnRediger" class="btnVisOrdRediger" onclick="btn_rediger()">Redigér</a>
-
+            <h5 class="visOrdOrd">{{this.ord}}</h5>
+            <h6 class="visOrdKategori">{{this.kategori}}</p>
+            <a href="#" class="btnVisOrdAfspilLyd">Afspil lydfil</button><br>
+        </div>
+        {{/if}}
+        <div>
+            <button id="btnRediger" class="floatTilfoj" onclick="#">Redigér</button>
         </div>
     </section>
 </body>
