Åh gud, lortet virker ikke

--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -40,7 +40,7 @@
       </form>
     </div>
     <div>
-      <button id="js_tilfoj_ord" class="floatTilfoj" onclick="location.href='/tilfojord'">Tilføj ord</button>
+        <button class="floatTilfoj" onclick="location.href='/tilfojord'" >Tilføj ord</button>
     </div>
   </section>
 
