--- a/Ordbog/views/visord.hbs
+++ b/Ordbog/views/visord.hbs
@@ -4,7 +4,7 @@
 <head>
     <title>Vis ord</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/tempOrdbogSheet.css">
+    <link rel="stylesheet" href="../stylesheets/tempOrdbogSheet.css">
     <script src="javascripts/ordbog.js"></script>
 </head>
 
