--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -46,19 +46,15 @@
 
   <script>
     // Kører her efter siden er indlæst og fjerner de 3 sidste tomme ord html objekter.
-    let ordArray = document.getElementsByName("id");
+    let ordArray = document.getElementsByTagName("li");
     let ordArrayLength = ordArray.length;
 
-    for (let i = 0; i <= ordArrayLength - 3; i++) {
-      if (ordArray[i].value == 0) {
-        ordArray[i].remove();
-      }
-    }
-
-    ordArrayLength = ordArray.length;
-    ordArray[ordArrayLength - 2].remove();
     ordArray[ordArrayLength - 3].remove();
-
+    ordArray.length;
+    ordArray[ordArrayLength - 3].remove();
+    ordArray.length;
+    ordArray[ordArrayLength - 3].remove();
+    
   </script>
 
 </body>
