--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -46,11 +46,7 @@
 
   <script>
     // Kører her efter siden er indlæst og fjerner de 3 sidste tomme ord html objekter.
-<<<<<<< HEAD
-    let ordArray = document.getElementsById("id");
-=======
-    let ordArray = document.getElementsByTagName("li");
->>>>>>> 1f73febbfa962f74a48c0905e216169917ca19f4
+    let ordArray = document.getElementsById("li");
     let ordArrayLength = ordArray.length;
 
     ordArray[ordArrayLength - 3].remove();
