--- a/Ordbog/public/stylesheets/tempOrdbogSheet.css
+++ b/Ordbog/public/stylesheets/tempOrdbogSheet.css
@@ -1,17 +1,120 @@
-.panel {
-    list-style-type: none;
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body, html{
+    height: 100%;
+    background: #ffffff;
+    font-family: 'Lato', sans-serif;
+}
+
+.container {
+    display: block;
+    position: relative;
+    margin: 40px auto;
+    height: auto;
+    width: 500px;
+    padding: 20px;
+}
+
+h2 {
+    color: #AAAAAA;
+}
+
+.mainContainer ul{
+    list-style: none;
     margin: 0;
     padding: 0;
+    overflow: auto;
+}
+
+ul li{
+    color: #AAAAAA;
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 100%;
+    border-bottom: 1px solid #333;
+}
+
+ul li input[type=radio]{
+    position: absolute;
+    visibility: hidden;
+}
+
+ul li label{
+    display: block;
+    position: relative;
+    font-weight: 300;
+    font-size: 1.35em;
+    padding: 25px 25px 25px 80px;
+    margin: 10px auto;
+    height: 30px;
+    z-index: 9;
+    cursor: default;
+    -webkit-transition: all 0.25s linear;
+}
+
+ul li:hover label{
+	color: #333333;
+}
+
+ul li .check{
+    display: block;
+    position: absolute;
+    border: 5px solid #AAAAAA;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    top: 30px;
+    left: 20px;
+      z-index: 5;
+      transition: border .25s linear;
+      -webkit-transition: border .25s linear;
+  }
+  
+  ul li:hover .check {
+    border: 5px solid #FFFFFF;
+  }
+  
+  ul li .check::before {
+    display: block;
+    position: absolute;
+      content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 5px;
+      left: 5px;
+    margin: auto;
+      transition: background 0.25s linear;
+      -webkit-transition: background 0.25s linear;
+  }
+  
+  input[type=radio]:checked ~ .check {
+    border: 5px solid #0DFF92;
+  }
+  
+  input[type=radio]:checked ~ .check::before{
+    background: #0DFF92;
+  }
+  
+  input[type=radio]:checked ~ label{
+    color: #0DFF92;
+  }
+
+.panel {
+    list-style-type: none;
+    margin: auto;
+    padding: 1em;
     overflow: hidden;
     background-color: #333333;
 }
-.panel{
-    background-color:#333333;
-    padding:1em;
-    /*width:92.5%;*/
-    margin:auto;
-    /*max-width:30em;*/
+
+.mainContainer {
+    width: 100%;
+    
 }
+
 .menuknap {
     float: left;
 }
@@ -64,25 +167,4 @@
   border: 1px solid #ddd;
   margin-top: 12px;
   margin-bottom: 10px;
-}
-
-#minListe {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#minListe li input {
-  border: 1px solid #ddd;
-  margin-top: 3px; /* Prevent double borders */
-  background-color: #f6f6f6;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: black;
-  display: block
-}
-
-#minListe li input:hover:not(.header) {
-  background-color: #eee;
 }
