--- a/Ordbog/public/stylesheets/tempOrdbogSheet.css
+++ b/Ordbog/public/stylesheets/tempOrdbogSheet.css
@@ -6,13 +6,31 @@ body, html{
     font-family: 'Lato', sans-serif;
 }
 
-.container {
+.searchContainer {
+    width: 100%;
+    font-family: 'Lato'
+}
+
+.searchContainer input {
+    /*background-image: url('/css/searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;*/
+    font-size: 16px;
+    font-family: sans-serif;
+    width: 70%;
+    padding: 12px;
+    border: 1px solid #ddd;
+    margin-top: 12px;
+    margin-bottom: 0px;
+  }
+
+.mainContainer {
     display: block;
     position: relative;
-    margin: 40px auto;
+    margin: 0px auto;
     height: auto;
     width: 500px;
-    padding: 20px;
+    padding: 0px;
 }
 
 h2 {
@@ -23,7 +41,8 @@ h2 {
     list-style: none;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    height: auto;
+    /*overflow: auto;*/
 }
 
 ul li{
@@ -31,7 +50,7 @@ ul li{
     display: block;
     position: relative;
     float: left;
-    width: 100%;
+    width: 70%;
     height: 100%;
     border-bottom: 1px solid #333;
 }
@@ -46,7 +65,7 @@ ul li label{
     position: relative;
     font-weight: 300;
     font-size: 1.35em;
-    padding: 25px 25px 25px 80px;
+    padding: 10px 25px 10px 80px;
     margin: 10px auto;
     height: 30px;
     z-index: 9;
@@ -65,7 +84,7 @@ ul li .check{
     border-radius: 100%;
     height: 25px;
     width: 25px;
-    top: 30px;
+    top: 18px;
     left: 20px;
       z-index: 5;
       transition: border .25s linear;
@@ -156,15 +175,4 @@ ul li .check{
 }
 .my-float{
 	margin-top:22px;
-}
-
-#searchInput {
-  /*background-image: url('/css/searchicon.png');
-  background-position: 10px 12px;
-  background-repeat: no-repeat;*/
-  font-size: 16px;
-  padding: 12px;
-  border: 1px solid #ddd;
-  margin-top: 12px;
-  margin-bottom: 10px;
 }
