--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -12,6 +12,7 @@
 
 <form method="POST" action="/api/updateord">
     <input type="text" name="ord" placeholder="ord">
+    <input type="text" name="nyt_ord" placeholder="nyt_ord">
     <button type="submit">Send</button>
 </form>
 
