--- a/Ordbog/public/stylesheets/tempOrdbogSheet.css
+++ b/Ordbog/public/stylesheets/tempOrdbogSheet.css
@@ -15,9 +15,9 @@ body, html{
     /*background-image: url('/css/searchicon.png');
     background-position: 10px 12px;
     background-repeat: no-repeat;*/
-    font-size: 16px;
+    font-size: 1.0em;
     font-family: sans-serif;
-    width: 70%;
+    width: 68%;
     padding: 12px;
     border: 1px solid #ddd;
     margin-top: 12px;
@@ -64,9 +64,9 @@ ul li label{
     display: block;
     position: relative;
     font-weight: 300;
-    font-size: 1.35em;
-    padding: 10px 25px 10px 80px;
-    margin: 10px auto;
+    font-size: 1.0em;
+    padding: 16px 25px 10px 60px;
+    margin: 5px auto;
     height: 30px;
     z-index: 9;
     cursor: default;
@@ -84,15 +84,15 @@ ul li .check{
     border-radius: 100%;
     height: 25px;
     width: 25px;
-    top: 18px;
-    left: 20px;
+    top: 16.5px;  /*18px*/
+    left: 10px; /*20px*/
       z-index: 5;
       transition: border .25s linear;
       -webkit-transition: border .25s linear;
   }
   
   ul li:hover .check {
-    border: 5px solid #FFFFFF;
+    border: 5px solid #333333;
   }
   
   ul li .check::before {
@@ -110,15 +110,15 @@ ul li .check{
   }
   
   input[type=radio]:checked ~ .check {
-    border: 5px solid #0DFF92;
+    border: 5px solid #0C9;
   }
   
   input[type=radio]:checked ~ .check::before{
-    background: #0DFF92;
+    background: #0C9;
   }
   
   input[type=radio]:checked ~ label{
-    color: #0DFF92;
+    color: #0C9;
   }
 
 .panel {
@@ -140,7 +140,8 @@ ul li .check{
 .menuknap a {
     display: block;
     color: white;
-    text-align: center;
+    font-family: sans-serif;
+    text-align: left;
     padding: 16px;
     text-decoration: none;
     font-size: 16px;
@@ -152,8 +153,8 @@ ul li .check{
 	position:fixed;
 	width:60px;
 	height:60px;
-	bottom:40px;
-	right:40px;
+	bottom:25px;
+	right:25px;
 	background-color:#0C9;
 	color:#FFF;
 	border-radius:50px;
@@ -165,8 +166,8 @@ ul li .check{
 	position:fixed;
 	width:60px;
 	height:60px;
-	bottom:120px;
-	right:40px;
+	bottom:95px;
+	right:25px;
 	background-color:#0C9;
 	color:#FFF;
 	border-radius:50px;
