--- a/Ordbog/views/visord.hbs
+++ b/Ordbog/views/visord.hbs
@@ -6,30 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stylesheets/tempOrdbogSheet.css">
     <script src="javascripts/ordbog.js"></script>
+    
 </head>
-
-<body>
-    <header>
+<header>
         <nav>
             <ul class="panel">
                 <li id="js_dine_ord" class="menuknap">Dine ord</li>
             </ul>
         </nav>
     </header>
+<body>
     <section>
         <!-- Hovedafsnit / Vis ord og billeder og redigér-->
         {{#if this}}
         <div id="vis_ord">
-            <img class="visOrdBillede">
+            <center>
+            
+            <img src="1542031170406-BmwBB2_IIAAeec2_557x_crop_center.progressive.jpg" alt="A Horse" height="150" width="150">
 
             <h5 class="visOrdOrd">{{this.ord}}</h5>
             <h6 class="visOrdKategori">{{this.kategori}}</p>
             <a href="#" class="btnVisOrdAfspilLyd">Afspil lydfil</button><br>
+            </center>
         </div>
         {{/if}}
         <div>
             <button id="btnRediger" class="floatTilfoj" onclick="#">Redigér</button>
+            <button>Slet</button>
         </div>
+        
     </section>
 </body>
 
