--- a/Ordbog/views/visord.hbs
+++ b/Ordbog/views/visord.hbs
@@ -22,7 +22,7 @@
         <div id="vis_ord">
             <center>
             
-            <img src="1542031170406-BmwBB2_IIAAeec2_557x_crop_center.progressive.jpg" alt="A Horse" height="150" width="150">
+            <img src="../uploads/1542031170406-BmwBB2_IIAAeec2_557x_crop_center.progressive.jpg" height="150" width="150">
 
             <h5 class="visOrdOrd">{{this.ord}}</h5>
             <h6 class="visOrdKategori">{{this.kategori}}</p>
