Knapper tilpasset i Visord hbs'en

--- a/Ordbog/views/visord.hbs
+++ b/Ordbog/views/visord.hbs
@@ -31,8 +31,12 @@
         </div>
         {{/if}}
         <div>
-            <button id="btnRediger" class="floatTilfoj" onclick="#">Redigér</button>
-            <button>Slet</button>
+            <form action="#" method="POST">
+                <button id="btnRediger" type="submit" class="floatTilfoj">Redigér</button>
+            </form>
+            <form action="" method="POST">
+                <button id="btnSlet" type="submit" class="floatVis">Slet</button>
+            </form>
         </div>
         
     </section>
