Knap til ordbog

--- a/Ordbog/views/visord.hbs
+++ b/Ordbog/views/visord.hbs
@@ -11,7 +11,7 @@
 <header>
         <nav>
             <ul class="panel">
-                <li id="js_dine_ord" class="menuknap">Dine ord</li>
+                <li><a href="../ordbog">Dine ord</li>
             </ul>
         </nav>
     </header>
