--- a/Ordbog/public/stylesheets/tempVisordSheet.css
+++ b/Ordbog/public/stylesheets/tempVisordSheet.css
@@ -181,9 +181,24 @@ ul li .check{
 .one {
     border-style: double;
     border-width: thick;
-    width: 300px;
-    text-align: center;
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;    
+}
+
+.one img {
+    padding: 1em;
+    max-width: 90%;
+    max-height: 90%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;    
+}
+
+.section {
+    padding: 1em;
+    width: auto;
 }
