slet ord funktion fungerer nu, findes i index.js

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -10,7 +10,7 @@
 
 <h2>Edit ord/image/sound/video:</h2>
 
-<form method="POST" action="/api/update/">
+<form method="POST" action="/api/updateord/">
     <input type="text" id= 'id' name="ord" placeholder="ord">
     <input type="text" name="nyt_ord" placeholder="nyt_ord">
     <button type="submit">Send</button>
