--- a/Ordbog/views/index.hbs
+++ b/Ordbog/views/index.hbs
@@ -6,5 +6,15 @@
   </head>
   <body>
     <h1>{{title}}</h1>
+    <br>
+    <h1>Endpoints in the system</h1>
+
+<p><a href="test">test</a> -test side, hvor vis ord, tilfoj ord og slet ord virker. (Mangler rediger ord) </p>
+<p><a href="ordbog">ordbog</a> - som virker</p>
+<p><a href="redigerord">redigerord</a> - som ikke virker herfra</p>
+<p><a href="visord">visord</a> - som heller ikke virker herfra</p>
+<p><a href="tilfojord">tilfojord</a> - som virker</p>
+<p><a href="inputtypes">inputtypes.html</a> - som ikke virker herfra</p>
+
   </body>
 </html>
