--- a/Ordbog/views/inputtypes.html
+++ b/Ordbog/views/inputtypes.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-</body>
+
 
 
 <form enctype="multipart/form-data" method="post">
@@ -25,6 +25,19 @@
     
     <h2>capture=microphone</h2>
     <input type="file" accept="audio/*;capture=microphone">
-  </form>
 
+    <input type="file" accept="audio/*" capture id="recorder">
+    <audio id="player" controls></audio>
+    <script>
+      var recorder = document.getElementById('recorder');
+      var player = document.getElementById('player');
+    
+      recorder.addEventListener('change', function(e) {
+        var file = e.target.files[0];
+        // Do something with the audio file.
+        player.src =  URL.createObjectURL(file);
+      });
+    </script>
+  </form>
+</body>
   </html>
