Begyndt på upload af video men den er ikke færdig endnu.

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -49,3 +49,10 @@
     <input type="file" accept="audio/*" name="audio">
     <input type="submit" value="upload">
 </form>
+
+<h1>Upload Video</h1>
+
+<form action="./ordbog/uploadvideo" method="POST" enctype="multipart/form-data">
+    <input type="file" accept="video/x-flv, video/mp4, application/x-mpegURL, video/MP2T, video/3gpp, video/quicktime, video/x-msvideo, video/x-ms-wmv" name="video">
+    <input type="submit" value="upload">
+</form>
