Mini fixes - style.css, clienttoserver, opretBruger.html

--- a/login/css/style.css
+++ b/login/css/style.css
@@ -29,7 +29,7 @@ p, div {
 }
 
 form {
-  border: 3px solid #f1f1f1;
+  /*border: 3px solid #f1f1f1;*/
 }
 
 /*-------inputfelter på login.html og opretbruger.html-------*/
