--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -39,14 +39,14 @@
 <h1>Upload Image</h1>
 
 <form action="./ordbog/uploadimage" method="POST" enctype="multipart/form-data">
-    <input type="file" accept="image/jpeg, image/png" name="image">
+    <input type="file" accept="image/jpeg, image/png, image/jpg" name="image">
     <input type="submit" value="upload">
 </form>
 
 <h1>Upload Audio</h1>
 
 <form action="./ordbog/uploadaudio" method="POST" enctype="multipart/form-data">
-    <input type="file" accept="audio/*" name="audio">
+    <input type="file" accept="audio/*" name="audio" capture>
     <input type="submit" value="upload">
 </form>
 
