--- a/Ordbog/views/index.hbs
+++ b/Ordbog/views/index.hbs
@@ -9,7 +9,7 @@
     <br>
     <h1>Endpoints in the system</h1>
 
-<p><a href="test">test</a> -test side, hvor vis ord, tilfoj ord og slet ord virker. Rediger ord fungerer også nu! Samt upload image virker også</p>
+<p><a href="test">test</a> -test side, hvor vis ord, tilfoj ord og slet ord virker. Rediger ord fungerer også nu! Samt upload af image, audio og video virker også</p>
 <p><a href="ordbog">ordbog</a> - som virker</p>
 <p><a href="redigerord">redigerord</a> - som ikke virker herfra</p>
 <p><a href="visord">visord</a> - som heller ikke virker herfra</p>
